Some headers modified. Still not compilling.

--- a/P3/Makefile
+++ b/P3/Makefile
@@ -41,7 +41,7 @@ CXX = clang++
 # c++14: estándar de 2014 - Recomendado si su compilador lo admite.
 # c++17: estándar de 2017 - Recomendado si su compilador lo admite.
 # c++2a: estándar previsto para 2020. Experimental, no recomendado.
-STD = c++14
+STD = c++17
 
 # Opciones para el compilador. Añada o quite las que prefiera pero deje
 # la primera. Recomendado: no quite ninguna.
@@ -52,7 +52,7 @@ CPPFLAGS = ${INCLUDES} -D${NOMBREPRACTICA}
 # --- Fin parte configurable
 
 LOCALLIBS = cadena.o fecha.o luhn.o
-EXTLIBS   = -lcrypt
+EXTLIBS   = #-lcrypt
 LIBS      = ${LOCALLIBS} ${EXTLIBS}
 VPATH     = .:${DIRFECHACADENA}:${DIRLUHN}:${DIRTESTS}
 
