Compiling P3 but not working

--- a/Giron_Garcia_Guillermo/P3/Makefile
+++ b/Giron_Garcia_Guillermo/P3/Makefile
@@ -52,7 +52,7 @@ CPPFLAGS = ${INCLUDES} -D${NOMBREPRACTICA}
 # --- Fin parte configurable
 
 LOCALLIBS = cadena.o fecha.o luhn.o
-EXTLIBS   = -lcrypt
+EXTLIBS   = #-lcrypt
 LIBS      = ${LOCALLIBS} ${EXTLIBS}
 VPATH     = .:${DIRFECHACADENA}:${DIRLUHN}:${DIRTESTS}
 
