--- a/old/P3/Makefile
+++ b/old/P3/Makefile
@@ -32,7 +32,7 @@ INCLUDES  = -I${DIRFECHACADENA} -I${DIRTESTS} -I.
 
 # Compilador de C++ preferido: el de LLVM (clang++), el de GNU (g++),
 # el de GNU en la versión 5 (g++-5), el de Intel (icpc)...
-CXX = clang++
+CXX = g++#clang++
 
 # ¿Qué estándar seguir?
 # ansi o c++98 o c++03: estándar de 1998, corregido en 2003. NO USAR YA.
