--- a/Giron_Garcia_Guillermo/P4/Makefile
+++ b/Giron_Garcia_Guillermo/P4/Makefile
@@ -36,7 +36,7 @@ DIRLUHN = ..
 
 # Compilador de C++ preferido: el de LLVM (clang++), el de GNU (g++),
 # el de GNU en la versión 5 (g++-5), el de Intel (icpc)...
-CXX = clang++
+CXX = g++#clang++
 
 # ¿Qué estándar seguir?
 # c++98 o c++03 (-ansi): estándar de 1998, corregido en 2003. NO USAR YA.
