--- a/Giron_Garcia_Guillermo/P4/Makefile
+++ b/Giron_Garcia_Guillermo/P4/Makefile
@@ -177,8 +177,8 @@ ${TESTS_OBJS}: ${TESTS_SRCS} ${TESTS_HDRS}
 #
 # para ver qué líneas se han ejecutado y cuáles no en fichero.cpp.gcov.
 
-CXXFLAGS = -pg -g -fprofile-arcs -ftest-coverage -std=${STD} -pedantic -Wall
-LDFLAGS  = -pg -fprofile-arcs
+#CXXFLAGS = -pg -g -fprofile-arcs -ftest-coverage -std=${STD} -pedantic -Wall
+#LDFLAGS  = -pg -fprofile-arcs
 
 ## Limpieza
 #  normal...
